dodanie wizji, wag poruszania się, walki, interakcji międziy agentami oraz gui